--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn JS</title>
-    <script src="/JS/javascript.js"></script>
     <script src="/CSS/style.css"></script>
 </head>
 <body>
+  
     
+
+    <script src="/JS/index.js"></script>
 </body>
 </html>
