--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learn JS</title>
-    <script src="/CSS/style.css"></script>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-  
-    
+    <div class="pink">
+        <button>Click me</button>
+    </div>
+
+    <div id="box"></div>
 
     <script src="/JS/index.js"></script>
 </body>
