--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-    <div class="pink">
-        <button>Click me</button>
-    </div>
+   <div class="header">
+    <h1>VALI WEB DEVLOPMENT</h1>
+    <p>With M. Valentin</p>
+   </div>
 
-    <div id="box"></div>
+   <div class="container">
+ 
+    
+   </div>
 
     <script src="/JS/index.js"></script>
 </body>
