--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <h1>VALI WEB DEVLOPMENT</h1>
     <p>With M. Valentin</p>
    </div>
-
+  
    <div class="container">
- 
-    
+    <p id="demo"></p>
+    <h2>Fruits</h2>
+    <p id="fruits"></p>
+    <h2>Cars</h2>
+    <p id="carBrands"></p>
    </div>
 
     <script src="/JS/index.js"></script>
