--- a/index.html
+++ b/index.html
@@ -19,8 +19,29 @@
     <p id="fruits"></p>
     <h2>Cars</h2>
     <p id="carBrands"></p>
+    <h2>Array challange</h2>
+    <p id="myList"></p>
+    <p id="myList1"></p>
    </div>
 
+
+
+   <button id="button">Press me</button>
+   <canvas id="canvas" 
+   style=" margin: 0;
+   padding: 50px;
+   background-color: rgba(127, 255, 212, 0.329);
+   height: 30px;
+   width: 30px;"></canvas>
+
+
+
+
+
+
+
     <script src="/JS/index.js"></script>
+
+
 </body>
 </html>
