starting darkmode project soon

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
 
 
-   <button id="button">Press me</button>
+
+   <button id="btn">dark mode</button>
    <canvas id="canvas" 
    style=" margin: 0;
    padding: 50px;
