dom learning goes well

--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
     <p>With M. Valentin</p>
    </div>
   
+   <div class="container1">
+    <h1 id="main-heading">Dream cars</h1>
+    <ul>
+        <li class="list-items">Porsche 911</li>
+        <li class="list-items">BMW M3</li>
+        <li class="list-items">Corvette</li>
+        <li class="list-items">Nissan s14</li>
+        <li class="list-items">Mazda Miata</li>
+    </ul>
+   </div>
+
+
+
    <div class="container">
     <p id="demo"></p>
     <h2>Fruits</h2>
