--- a/index.html
+++ b/index.html
@@ -8,24 +8,45 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-   <div class="header">
+  <!--
+    <div class="header">
     <h1>VALI WEB DEVLOPMENT</h1>
     <p>With M. Valentin</p>
    </div>
-  
+-->
    <div class="container1">
-    <h1 id="main-heading">Dream cars</h1>
-    <ul>
-        <li class="list-items">Porsche 911</li>
-        <li class="list-items">BMW M3</li>
-        <li class="list-items">Corvette</li>
-        <li class="list-items">Nissan s14</li>
-        <li class="list-items">Mazda Miata</li>
-    </ul>
+        <h1 id="main-heading">Dream cars</h1>
+        <ul>
+            <li class="list-items">Porsche 911</li>
+            <li class="list-items">BMW M3</li>
+            <li class="list-items">Corvette</li>
+            <li class="list-items">Nissan s14</li>
+            <li class="list-items">Mazda Miata</li>
+        </ul>
    </div>
 
 
 
+   <h1 id="second-heading">EVENT LISTNERS</h1>
+
+   <div class="container2">
+      <div class="boxes box-1">
+        <h1>example 1</h1>
+        <button>press me</button>
+      </div>
+      <div class="boxes box-2">
+        <h1>example 2</h1>
+        <button>press me</button>
+      </div>
+      <div class="boxes box-3">
+        <h1>example 3</h1>
+        <button>press me</button>
+      </div>
+   </div>
+
+
+
+ <!-- 
    <div class="container">
     <p id="demo"></p>
     <h2>Fruits</h2>
@@ -51,7 +72,7 @@
 
 
 
-
+-->
 
 
     
