--- a/index.html
+++ b/index.html
@@ -8,12 +8,36 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
+
+  <div class="container">
+    <button class="reveal-btn boxes">Reveal More</button> 
+
+    <div class="hidden-content boxes">
+      this works 
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   <!--
     <div class="header">
     <h1>VALI WEB DEVLOPMENT</h1>
     <p>With M. Valentin</p>
    </div>
--->
+
    <div class="container1">
         <h1 id="main-heading">Dream cars</h1>
         <ul>
@@ -32,7 +56,7 @@
    <div class="container2">
       <div class="boxes box-1">
         <h1>example 1</h1>
-        <button>press me</button>
+        <button onclick="alert('this works')">press me</button>
       </div>
       <div class="boxes box-2">
         <h1>example 2</h1>
@@ -44,9 +68,6 @@
       </div>
    </div>
 
-
-
- <!-- 
    <div class="container">
     <p id="demo"></p>
     <h2>Fruits</h2>
