--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
 </head>
 <body>
 
-  <div class="container">
-    <button class="reveal-btn boxes">Reveal More</button> 
-
-    <div class="hidden-content boxes">
-      this works 
-    </div>
-  </div>
-
+ <button id="paper">paper</button>
+ <button id="rock">rock</button>
+ <button id="scissors">scissors</button>
+ 
 
 
 
