--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 </head>
 <body>
 
- <button id="paper">paper</button>
- <button id="rock">rock</button>
- <button id="scissors">scissors</button>
- 
-
+ <button>Display message box</button>
 
 
 
