made a cool return value function

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
 
- <button>Display message box</button>
+ <!-- <button>Display message box</button> -->
 
 
 
-
+ <input class="numberInput" type="text">
+ <p></p>
 
 
 
