--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
  <!-- <button>Display message box</button> -->
 
+<p id="demo"></p>
 
-
- <input class="numberInput" type="text">
- <p></p>
+ <!-- <input class="numberInput" type="text">
+ <p></p> -->
 
 
 
