--- a/index.html
+++ b/index.html
@@ -9,84 +9,12 @@
 </head>
 <body>
 
- <!-- <button>Display message box</button> -->
-
-<p id="demo"></p>
-
- <!-- <input class="numberInput" type="text">
- <p></p> -->
+ 
+<h1>People entered:</h1>
+<h2 id="count-el">0</h2>
 
 
 
-
-
-
-
-
-
-
-  <!--
-    <div class="header">
-    <h1>VALI WEB DEVLOPMENT</h1>
-    <p>With M. Valentin</p>
-   </div>
-
-   <div class="container1">
-        <h1 id="main-heading">Dream cars</h1>
-        <ul>
-            <li class="list-items">Porsche 911</li>
-            <li class="list-items">BMW M3</li>
-            <li class="list-items">Corvette</li>
-            <li class="list-items">Nissan s14</li>
-            <li class="list-items">Mazda Miata</li>
-        </ul>
-   </div>
-
-
-
-   <h1 id="second-heading">EVENT LISTNERS</h1>
-
-   <div class="container2">
-      <div class="boxes box-1">
-        <h1>example 1</h1>
-        <button onclick="alert('this works')">press me</button>
-      </div>
-      <div class="boxes box-2">
-        <h1>example 2</h1>
-        <button>press me</button>
-      </div>
-      <div class="boxes box-3">
-        <h1>example 3</h1>
-        <button>press me</button>
-      </div>
-   </div>
-
-   <div class="container">
-    <p id="demo"></p>
-    <h2>Fruits</h2>
-    <p id="fruits"></p>
-    <h2>Cars</h2>
-    <p id="carBrands"></p>
-    <h2>Array challange</h2>
-    <p id="myList"></p>
-    <p id="myList1"></p>
-   </div>
-
-
-
-
-   <button id="btn">dark mode</button>
-   <canvas id="canvas" 
-   style=" margin: 0;
-   padding: 50px;
-   background-color: rgba(127, 255, 212, 0.329);
-   height: 30px;
-   width: 30px;"></canvas>
-
-
-
-
--->
 
 
     
