person counter, mini calculator done

--- a/index.html
+++ b/index.html
@@ -10,8 +10,32 @@
 <body>
 
  
-<h1>People entered:</h1>
+<!-- <h1>People entered:</h1>
 <h2 id="count-el">0</h2>
+<div class="buttons">
+    <button id="increment-btn" onclick="increment()">INCREMENT</button>
+    <button id="save-btn" onclick="save()">SAVE</button>
+    <button id="save-btn" onclick="removeEntry()">REMOVE ENTRYES</button>
+</div>
+<h2 id="saved-count">Entryes: </h2>
+
+<button id="buy-btn" onclick="error()">Buy Now</button>
+<p id="errorMsg"></p> -->
+
+<!-- mini clculator -->
+
+<!-- <span id="num1"></span>
+<span id="num2"></span>
+<div class="buttons">
+    <button id="add" onclick="add()">+</button>
+    <button id="substract" onclick="substract()">-</button>
+    <button id="multiply" onclick="multiply()">*</button>
+    <button id="divide" onclick="divide()">/</button>
+</div>
+<span id="result"></span> -->
+
+<!-- blackjack -->
+
 
 
 
