--- a/index.html
+++ b/index.html
@@ -36,9 +36,15 @@
 
 <!-- blackjack -->
 
-
-
-
+    <h1>Blackjack</h1>
+    <p id="message-el">Do you want to play a round?</p>
+    <p id="cards-el">Cards: </p>
+    <p id="score-el">Score: </p>
+<div class="buttons">
+    <button id="playBtn" onclick="startGame()">Play</button>
+    <button id="drawBtn" onclick="newCard()">Draw</button>
+</div>
+<p class="test"></p>
 
 
     
