I'm done for today, was a good day

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <button id="playBtn" onclick="startGame()">Play</button>
     <button id="drawBtn" onclick="newCard()">Draw</button>
 </div>
-<p class="test"></p>
+<p class="player-el"></p>
 
 
     
