new project, chrome extension

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <!-- blackjack -->
 
-    <h1>Blackjack</h1>
+    <!-- <h1>Blackjack</h1>
     <p id="message-el">Do you want to play a round?</p>
     <p id="cards-el">Cards: </p>
     <p id="score-el">Score: </p>
@@ -44,10 +44,20 @@
     <button id="playBtn" onclick="startGame()">Play</button>
     <button id="drawBtn" onclick="newCard()">Draw</button>
 </div>
-<p class="player-el"></p>
+<p class="player-el"></p> -->
 
 
-    
+<!-- blackjack -->
+
+<!-- chrome extension     -->
+<div class="container">
+
+<input type="text" id="input-el">
+<button id="input-btn">SAVE INPUT</button>
+<button id="save-btn">SAVE</button>
+</div>
+
+<!-- chrome extension     -->
 
 
 </body>
