--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
 <!-- chrome extension     -->
 <div class="container">
 
-<input type="text" id="input-el">
+<input onfocus="this.value=''" value="input here" type="text" id="input-el">
 <button id="input-btn">SAVE INPUT</button>
 <button id="save-btn">SAVE</button>
+<ul id="ul-el">
+</ul>
 </div>
 
 <!-- chrome extension     -->
